[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/bossShip.png" type="Texture" id=1]
[ext_resource path="res://Characters/Boss1.gd" type="Script" id=2]
[ext_resource path="res://HUD_Boss.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 97.9101, 71.1078 )

[node name="Boss1" type="Area2D" groups=[
"boss",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 87.6812 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
autostart = true

[node name="HUD_Boss" parent="." instance=ExtResource( 3 )]
health_value = 100
[connection signal="area_entered" from="." to="." method="_on_Boss1_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
